--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: aquamarine;">
+    <h1>Ejemplo de manejo de GIT</h1>
     
 </body>
 </html>
